Updated some layout issues

--- a/public/stylesheets/form.css
+++ b/public/stylesheets/form.css
@@ -39,7 +39,7 @@
     display: none;
 }
 
-#signup-header {
+#createtab-header {
 	padding: 7px 18px 5px 34px;
 	background-color: #12282F;
 	border-bottom: 1px solid #FFF9E5;
